Fix search modal on mobile

--- a/static/profile.css
+++ b/static/profile.css
@@ -101,6 +101,22 @@
 	right: 20px;
 }
 
+#search-modal {
+	display: none;
+	position: absolute;
+	top: 50%;
+	left: 10vw;
+	right: 10vw;
+	transform: translateY(-50%);
+	height: 500px;
+	overflow-y: scroll;
+	background-color: #ffffff;
+	border: 1px solid #ffffff;
+	border-radius: 10px;
+	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+	z-index: 999;
+}
+
 @media screen and (max-width: 900px) {	
 	.header, .content {
 		margin-left: 10px;
@@ -111,5 +127,10 @@
 		position: relative;
 		display: block;
 		margin-top: 20px;
+	}
+
+	#search-modal {
+		left: 10px;
+		right: 10px;
 	}
 }
